[tool.poetry]
name = "junko"
version = "0.1.0"
description = "A browser for checking the content of Japanese TV data broadcasting on PC."
authors = ["kyokuheishin <kyokuheishin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
